testing/aprilsh: fix pkg-config usage & redefinition of struct utmpx
fixes build with utmps 0.1.3.0 and skalibs 2.14.4.0

unblocks Go 1.24.3 rebuild for s390x and allows it to upload testing

--- a/testing/aprilsh/APKBUILD
+++ b/testing/aprilsh/APKBUILD
@@ -18,7 +18,10 @@ subpackages="
 source="$pkgname-$pkgver.tar.gz::https://github.com/ericwq/aprilsh/archive/refs/tags/$pkgver.tar.gz
 	fix-tests.patch
 	apshd.logrotate
-	apshd.initd"
+	apshd.initd
+	fix-pkg-config.patch
+	fix-redefinition-struct-utmpx.patch
+	"
 options="net" # go dependencies
 
 _build_tag="-tags utmps"
@@ -28,6 +31,7 @@ export GOTMPDIR="${GOTMPDIR:-"$srcdir"}"
 export GOMODCACHE="${GOMODCACHE:-"$srcdir/go"}"
 
 prepare() {
+	go mod vendor
 	default_prepare
 
 	protoc --go_out=. -I . ./protobufs/transportInstruction.proto
@@ -81,4 +85,6 @@ e23df17cf3e88b6bce2d0d9c2ea365605fb493534a0fbf578ac2c1e3d9e0c82fdacc3b0e02d8f864
 c44781b6f81b3bf519ecec71588435b425581297613c6bec59de793153014937cad31b72390de9e3817b852335964f257ce08ded6b52da938bd96f5546d379a6  fix-tests.patch
 5e65b2c344d31928398234eacf08e153d2edf991709703ffa4905abffac516658be8146bab5cd4cd31d8812619e9c85aac344537546d15ca57a3e2dc83051f48  apshd.logrotate
 f7afd2a135c2d3c6357f02ed4e580e85275de2fcd2d1c3dabefffeca4fecb4cc8f21243e97440b17256cb56a8c006b81635d418ab5457b5b4aa78deac5d00dd1  apshd.initd
+ce2d7832fcdb81ae73ac8298bc23f2633560442a83be32c698cfe8096c9eb3c6e0e4625b59ef0f37b90cf8b465f8e13a1fc2569c6141ea13d17b77219132c0af  fix-pkg-config.patch
+1c5fec603a8b02400978f50a0315695146fa530a2e9cc120bd588f84ad58e70bf1574a76acec9df204a2516bd9619ebb38a3371919a2e3d5126e1a10b5be3533  fix-redefinition-struct-utmpx.patch
 "
