Revert "main/mesa: upgrade to 25.1.0"
This reverts commit 2e2f304dd9cc6274847bb677f45a42f02b30d502.

doesn't build on armhf

--- a/main/mesa/APKBUILD
+++ b/main/mesa/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: David Heidelberg <david@ixit.cz>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mesa
-pkgver=25.1.0
-pkgrel=0
+pkgver=25.0.5
+pkgrel=1
 pkgdesc="Mesa DRI OpenGL library"
 url="https://www.mesa3d.org"
 arch="all"
@@ -35,18 +35,18 @@ makedepends="
 	$depends_dev
 	binutils
 	bison
-	elfutils-dev
 	eudev-dev
 	expat-dev
 	findutils
 	flex
 	gettext
+	elfutils-dev
 	glslang-dev
 	libtool
+	libxfixes-dev
 	libva-dev
 	libvdpau-dev
 	libx11-dev
-	libxfixes-dev
 	libxml2-dev
 	libxrandr-dev
 	libxxf86vm-dev
@@ -82,12 +82,8 @@ case "$CARCH" in
 x86*)
 	_gallium_drivers="$_gallium_drivers,svga,i915,iris,crocus"
 	;;
-armhf|armv7)
+armhf|armv7|aarch64)
 	_gallium_drivers="$_gallium_drivers,vc4,v3d,freedreno,lima,panfrost,etnaviv,tegra"
-	_gallium_drivers="${_gallium_drivers//r300,}"
-	;;
-aarch64)
-	_gallium_drivers="$_gallium_drivers,vc4,v3d,freedreno,lima,panfrost,etnaviv,tegra,asahi"
 	_gallium_drivers="${_gallium_drivers//r300,}"
 	;;
 riscv64|loongarch64)
@@ -386,7 +382,7 @@ _vulkan_layers() {
 }
 
 sha512sums="
-40298370727fa1ad6d59be8692dfef01c42e41780816e9b951a05f779c7acca127162d2d3cedfccb7bfe3834b9e917c2b9bc6cb76887488d919cb61741a1da1a  mesa-25.1.0.tar.xz
+d65e027829e3bef60bc0e3e71160e6b3721e797e2157c71dbeef0cd6e202f8f8098b3cd41159cd0e96e520eaf92ea49c2c9bb1af1a54867b6a7c551c2197c068  mesa-25.0.5.tar.xz
 4cfd6532a96103589efd885240ce12414b473aed05956507e0b78a46e44216974adac1a8dc22db0d185e6c8a98988ebaed79ac0e83156c75a41199591f52f944  23575.patch
 ce1887fb7d425b94c375a0547bee40c308809c01f5ce1bcddabcc69a7fcb445efb9d5f5c7bac49b2778ab40687c7bce204d278b0bf028d124c75e59083107fba  riscv64-tls.patch
 "
