community/quickjs: upgrade to 0.20250426 and enable on ppc64le

--- a/community/quickjs/APKBUILD
+++ b/community/quickjs/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Chloe Kudryavtsev <code@toast.bunkerlabs.net>
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=quickjs
-_pkgver=2024-01-13
+_pkgver=2025-04-26
 pkgver=0.${_pkgver//-}
 pkgrel=0
 pkgdesc="Small and embeddable Javascript engine"
 url="https://bellard.org/quickjs/"
-arch="all !ppc64le" # build segfaults on ppc64le
+arch="all"
 license="MIT"
 depends_dev="$pkgname=$pkgver-r$pkgrel"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-libs $pkgname-static"
@@ -50,7 +50,7 @@ static() {
 }
 
 sha512sums="
-9f426404e4dc1e2a41fcc235b72e58708041aed24eadd5fb9e82f62435501003d3a6b04831f307b04852551d2fd265b94cd400b3293ec0810465f52de8a6c057  quickjs-2024-01-13.tar.xz
+7b9e4316c470f1163abed038ba2919e9367f026f8af8afb07ec07ac98409083c45373126764b526a78651a83e7896d6d05456e60dec46e451315bbeb336da23e  quickjs-2025-04-26.tar.xz
 c69217ba9cd38e2c4a8fe6a55ea552dd1c1ece8ac77514e824cc90ff36c616c76e98c43f23397e8939412ad8303c7e0bb813762565f97075eee70017fdd27c82  00-makefile.patch
 0116e8562909e4867145b4b41a39c24600957ac57b048432ef068d18af007811f7eeab753d8902cd265d0327e64501c69160dfafee37ea840941e77514329514  01-sharedlib.patch
 "
