*/*: rebuild against protobuf 29.4

--- a/testing/onnxruntime/APKBUILD
+++ b/testing/onnxruntime/APKBUILD
@@ -1,7 +1,7 @@
 maintainer="leso-kn <info@lesosoftware.com>"
 pkgname=onnxruntime
 pkgver=1.21.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Cross-platform, high performance ML inferencing and training accelerator"
 url="https://onnxruntime.ai/"
 # x86, s390x, loongarch64: fails to build
@@ -37,6 +37,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/microsoft/onnxruntime/archiv
 	no-execinfo.patch
 	system.patch
 	0001-Remove-MATH_NO_EXCEPT-macro.patch
+	upb-fix.patch
 	"
 options="net"
 
@@ -57,8 +58,6 @@ build() {
 		-Donnxruntime_BUILD_UNIT_TESTS="$(want_check && echo ON || echo OFF)" \
 		-Donnxruntime_ENABLE_PYTHON=ON \
 		-Donnxruntime_USE_NEURAL_SPEED=OFF # fix for 1.17.0, see: https://github.com/microsoft/onnxruntime/pull/19382
-	# hack for protobuf 23
-	sed -i 's|CMAKE_CXX_STANDARD 11|CMAKE_CXX_STANDARD 17|' build/_deps/onnx-src/CMakeLists.txt
 
 	# from testing/flutter/shared-libcxx.patch.engine
 	patch -p1 < ../flatbuffers-locale.patch.noauto
@@ -101,6 +100,7 @@ sha512sums="
 028a7f48f41d2e8a453aae25ebc4cd769db389401937928b7d452fab5f8d7af8cb63eb4150daf79589845528f0e4c3bdfefa27af70d3630398990c9e8b85387b  onnxruntime-1.21.0.tar.gz
 52e1c1e4a69543b3b9bcfabbd3f6202edf309f56be129668ad226e7ad7c2f1220ce169f9957fbc1fc4f3cae5abc984f8fe5ea4990fb2ebb033d7111d1d298f95  flatbuffers-locale.patch.noauto
 976913be90b0a82ff1ba403f46306ef4e5939bb05296227c99d3c4a609dd00f5750f9b1c6c30d20791ff0724c1bcffc6aa498eac906257aefefc6f35df796fe0  no-execinfo.patch
-4f17065ee5af1ed20bcc68f46138114c1fb333ea47bf1af4023e31e33b9331d9902e3eb9ba22ae1eeacd3f2db50ff4a733c0ec196b137a1393d32dfa6dc99bd6  system.patch
-b70a09b0de7921e494a85fe7f0ac46ad9c1117e9dcf8f7ec45e518df975bb56e1b663396ae969deaaabda94135c5b6e082f59d8b916483518589ffde14c04565  0001-Remove-MATH_NO_EXCEPT-macro.patch
+a8d51449f1f8bebab42e05603826d381da8b08ffee16fd987bef95d52ace50f7970116d03212fd945c412f501c1ede092f1777d87a7b3a2a7851e2883774c653  system.patch
+8f6129686fc3f241df174b8a86e957642e0b0a3a9e2ef15bea98ddea199291b444b6b39e4f56f8a7a2e64ee03113ad140fd664a7b6f33a8a9e23c40e883e08df  0001-Remove-MATH_NO_EXCEPT-macro.patch
+0a69996c407bc999bf3c5f1ca0594e2666890dddcce480213ca7c317613b0b1ad3382fb117bda492fbd2cd450dad1bb3a1d747b3565c16ae17dc0bbd3dc38577  upb-fix.patch
 "
