community/perl-javascript-quickjs: prevent using bundled quickjs headers

--- a/community/perl-javascript-quickjs/APKBUILD
+++ b/community/perl-javascript-quickjs/APKBUILD
@@ -35,6 +35,7 @@ builddir="$srcdir/$_pkgreal-$pkgver"
 prepare() {
 	default_prepare
 
+	rm -r quickjs/ # prevent unintended use of headers from vendored quickjs
 	cp -v ../quickjs-shared.mk.pl Makefile.PL
 }
 
