--- a/community/gst-plugins-rs/APKBUILD
+++ b/community/gst-plugins-rs/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Krassy Boykinov <kboykinov@teamcentrixx.com>
 pkgname=gst-plugins-rs
-pkgver=0.13.4
+pkgver=0.13.6
 pkgrel=0
 pkgdesc="Gstreamer rust plugins"
 url="https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
@@ -74,7 +74,7 @@ export SODIUM_USE_PKG_CONFIG=1
 prepare() {
 	default_prepare
 
-	cargo fetch --target="$CTARGET" --locked
+	cargo fetch --locked
 }
 
 case "$CARCH" in
@@ -121,7 +121,7 @@ tools() {
 }
 
 sha512sums="
-5f21a566d362cc791e642393d0aeb5c5297cc472c0dc1006c9bd0e83a465582f8c3ee1ae450463c6ef6502cadb91ce1a677013314ece95aff4ed210e11c38d35  gst-plugins-rs-0.13.4.tar.gz
+3f5981d4c1d68a25ab0fdef8593eee295041567cbb5efa3a8d13752cc46a609861b6a85a9d3d245a30397600f2a49428a64b12acaaa4684397ebdb4244d7cbf7  gst-plugins-rs-0.13.6.tar.gz
 5831b9e1f1f5a6c29d302256e76802053dd93bf316be818c4a4b33c8a2ea70827e5905627a41ed9cd0d582dc90f22c834ebae776f4cb481911014fbbe429917d  0001-use-cargo-auditable.patch
 004862f52560082ceedd81d530643f191c2497f9fe0f3cc878a96414836cca759e542727f9cf3b67c6edae51f605bd31cfc15675da4668ef7efd112c0cfbe147  0002-dylib.patch
 "
