community/bird2: fix apk name

--- a/community/bird2/APKBUILD
+++ b/community/bird2/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Katie Holly <holly@fuslvz.ws>
 # Contributor: Mike Crute <mike@crute.us>
 # Maintainer: Mike Crute <mike@crute.us>
-pkgname=bird
+pkgname=bird2
 pkgver=2.17.1
 pkgrel=0
 pkgdesc="BIRD Internet Routing Daemon"
