main/mesa: install clc for armhf
https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/32720

--- a/main/mesa/APKBUILD
+++ b/main/mesa/APKBUILD
@@ -152,6 +152,18 @@ armv7|aarch64|x86|x86_64)
 		$pkgname-rusticl
 		"
 	;;
+armhf)
+	# still requires clc for panfrost (https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/32720)
+	makedepends="
+		$makedepends
+		clang$_llvmver-dev
+		libclc-dev~$_llvmver
+		rust
+		rust-bindgen
+		spirv-llvm-translator-dev
+		"
+	_rusticl=false
+	;;
 *)
 	_rusticl=false
 	;;
