community/bupstash: enable on armhf, armv7, x86

--- a/community/bupstash/APKBUILD
+++ b/community/bupstash/APKBUILD
@@ -5,18 +5,19 @@ pkgver=0.12.0
 pkgrel=7
 pkgdesc="Easy and efficient encrypted backups"
 url="https://bupstash.io/"
-# armhf,armv7,x86: sodium bindgen test fails
 # s390x: fails to build nix crate
-# loongarch64: fails to build nix crate
-arch="all !armhf !armv7 !s390x !x86 !loongarch64"
+# loongarch64: fails to build libc crate
+arch="all !s390x !loongarch64"
 license="MIT"
 makedepends="
 	cargo
 	cargo-auditable
+	clang-dev
 	libsodium-dev
 	lz4-dev
 	sqlite-dev
 	ronn
+	rust-bindgen
 	zstd-dev
 	"
 options="net"
@@ -45,7 +46,8 @@ prepare() {
 	EOF
 
 	cargo fetch --target="$CTARGET" --locked
-
+	# Regenerate sodium bindings
+	sh ./support/bindgen.sh
 	cd doc/man
 	ronn -r *.md
 }
@@ -71,5 +73,5 @@ a1fb8af217dcca4322bceb6286379096586c0b7359d7e794d8f8b2890dc2a3ee8cc8baace15b42a3
 c10c8dd9ddd17d53a730da07d2eb1595e9924ed4ec50aaf55db30e197f8cc77ca76194bfb4a04808db4be53789ba2eead3b0a23625e662911e38cb82ca730b34  regex-features.patch
 9963dee4793d2c365ad05d0141dd7b28ddb4098d1b9b60561d6f3f05401dbdbb581b6a89e0d63ec0f5167a4e8478390eff6e3380581867d1dfe0ed2074449870  unbundle-sqlite.patch
 781d2a8e8fb1776f40af20eecab0f64b1158fa1c989a0bc8e7df8b4f9a35ec8d925188f1d723b31495ed7aa228303b45b9c29320517041c3fba2e06d278ff029  libc-crate-update.patch
-4e47b2d0925dc2e303d6e8dec4748566e04302df63f964d651b4e041dbbf7e1ed26d6b606c37e60fbf9955b2dbf444e52c5546deb9fce75d2dd8a3110ba15c00  sodium-bindgen.patch
+4f1882b006a1d4236ff681b07663de51cccf6c1bf43847b43ec6ec5fe0df275e2920763882aba8f634838dc482e19bc6e8fb7cf3e8978d1d612b23aace4d341a  sodium-bindgen.patch
 "
