--- a/community/quickjs/APKBUILD
+++ b/community/quickjs/APKBUILD
@@ -9,7 +9,12 @@ url="https://bellard.org/quickjs/"
 arch="all"
 license="MIT"
 depends_dev="$pkgname=$pkgver-r$pkgrel"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-libs $pkgname-static"
+subpackages="
+	$pkgname-static
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-libs
+	"
 source="https://bellard.org/quickjs/quickjs-$_pkgver.tar.xz
 	00-makefile.patch
 	01-sharedlib.patch
@@ -46,7 +51,9 @@ package() {
 
 static() {
 	pkgdesc="$pkgdesc - static binaries"
+
 	amove usr/bin/*.static
+	amove usr/lib/quickjs/*.a
 }
 
 sha512sums="
