community/helix: use tree-sitter-rust 0.24.0
Tests fail otherwise

community/helix: Add option for using tree-sitter runtime from upstream

Upstream recommends[1][2] using tree-sitter grammars/queries they ship
and not using them from other sources (e.g. tree-sitter).

This adds two new subpkgs, and a virtual `helix-tree-sitter` that
they both provide in order to prevent both from being installed at the
same time. `helix-tree-sitter-system` sets up helix to use tree-sitter
grammars from aports, and `helix-tree-sitter-vendor` packages the
tree-sitter runtime from the upstream release.

See install script change in this patch for more info. I also added a
post-upgrade install script, symlinked to post-install, so that this
message is printed on upgrade too (I think it would be helpful to show
it then).

Disabled tests also seem to run fine now.

Fixes #16336

1. https://docs.helix-editor.com/master/building-from-source.html#configuring-helixs-runtime-files
2. https://github.com/helix-editor/helix/discussions/9683

--- a/community/helix/APKBUILD
+++ b/community/helix/APKBUILD
@@ -2,36 +2,25 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=helix
 pkgver=25.01.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A post-modern modal text editor"
 url="https://helix-editor.com/"
 arch="all"
 license="MPL-2.0"
 makedepends="cargo cargo-auditable"
-checkdepends="tree-sitter-rust tree-sitter-ruby"
 options="net"
-install="$pkgname.post-install"
-# This is needed just for tests.
-_tsrust_ver="0.21.2"
-source="https://github.com/helix-editor/helix/archive/$pkgver/helix-$pkgver.tar.gz
-	https://github.com/tree-sitter/tree-sitter-rust/archive/v$_tsrust_ver/tree-sitter-rust-$_tsrust_ver.tar.gz
+install="$pkgname.post-install $pkgname.post-upgrade"
+source="
+	https://github.com/helix-editor/helix/archive/$pkgver/helix-$pkgver.tar.gz
 	bump-cc-rs.patch
 	"
-
-# Don't build tree-sitter languages, we provide them in standalone aports.
-export HELIX_DISABLE_AUTO_GRAMMAR_BUILD=1
-
-export HELIX_DEFAULT_RUNTIME=/usr/share/helix/runtime
+subpackages="
+	$pkgname-tree-sitter-vendor:_vendor
+	$pkgname-tree-sitter-system:_system:noarch
+	"
 
 prepare() {
 	default_prepare
-
-	# This is needed for running tests.
-	mkdir -p runtime/grammars/sources
-	ln -s /usr/lib/tree-sitter/rust.so runtime/grammars/rust.so
-	ln -s /usr/lib/tree-sitter/ruby.so runtime/grammars/ruby.so
-	ln -s "$srcdir"/tree-sitter-rust-$_tsrust_ver runtime/grammars/sources/rust
-
 	cargo fetch --target="$CTARGET" --locked
 }
 
@@ -46,9 +35,7 @@ check() {
 	#	helix-vcs::src::git::test::unmodified_file
 	unset GIT_CEILING_DIRECTORIES
 
-	# XXX: test_treesitter_indent_cpp is somehow broken
-	cargo test --frozen --workspace -- \
-		--skip test_treesitter_indent_cpp
+	cargo test --frozen --workspace
 }
 
 package() {
@@ -57,19 +44,32 @@ package() {
 	install -D -m644 contrib/Helix.desktop -t "$pkgdir"/usr/share/applications/
 	install -D -m644 logo.svg "$pkgdir"/usr/share/icons/hicolor/scalable/apps/Helix.svg
 
-	# Remove helix grammars and queries, use system ones instead.
-	rm -rf runtime/queries
-	rm -rf runtime/grammars
-
 	install -d -m755 "$pkgdir"/usr/share/"$pkgname"
-	cp -r runtime "$pkgdir"/usr/share/"$pkgname"
 
-	ln -Ts ../../../lib/tree-sitter "$pkgdir"/usr/share/$pkgname/runtime/grammars
-	ln -Ts ../../tree-sitter/queries "$pkgdir"/usr/share/$pkgname/runtime/queries
+	rm runtime/grammars/.gitkeep
+	rm runtime/themes/README.md
+	rm -rf runtime/grammars/sources
+	cp -r runtime "$pkgdir"/usr/share/"$pkgname"
+}
+
+_vendor() {
+	provides="helix-tree-sitter=$pkgver-r$pkgrel"
+	provider_priority=100
+
+	amove usr/share/helix/runtime/grammars
+	amove usr/share/helix/runtime/queries
+}
+
+_system() {
+	provides="helix-tree-sitter=$pkgver-r$pkgrel"
+	provider_priority=50
+
+	mkdir -p  "$subpkgdir"/usr/share/helix/runtime
+	ln -Ts ../../../lib/tree-sitter "$subpkgdir"/usr/share/helix/runtime/grammars
+	ln -Ts ../../tree-sitter/queries "$subpkgdir"/usr/share/helix/runtime/queries
 }
 
 sha512sums="
 1f4f63563f68595e69ab65f3204b4a39004133248896b14fe9cfbaf7ed3dce5281618fce35f81a470da54f453ffbf9316fde438544df110f8b4285b70bee767d  helix-25.01.1.tar.gz
-304b232683ded9973a94ec872401151a5900e3423c7bff966b3f5ec4a71122405fb3790f71f5fb445b8af72a31176349cb3ea8bc7d1b1a042ee574420472e19e  tree-sitter-rust-0.21.2.tar.gz
 93b99ab30b99e68c1bc85245e35a67ca24aae1669862e254e17d4b860a35b8f8bcc2856c937b56aa94e9c2366d042cfd07acc4723ff5755e2a2537ab9a6942ba  bump-cc-rs.patch
 "
