community/njs: build shared libnjs
So we can build community/unit with njs support.

--- a/community/njs/APKBUILD
+++ b/community/njs/APKBUILD
@@ -4,7 +4,7 @@ pkgname=njs
 # Keep it in sync with njs in main/nginx.
 pkgver=0.9.0
 pkgrel=0
-pkgdesc="njs scripting language CLI utility"
+pkgdesc="NGINX JavaScript interpreter CLI"
 url="https://nginx.org/en/docs/njs/"
 arch="all"
 license="BSD-2-Clause"
@@ -15,9 +15,16 @@ makedepends="
 	pcre2-dev
 	"
 checkdepends="expect"
-subpackages="$pkgname-debug $pkgname-libs-static"
+subpackages="
+	$pkgname-libs-static
+	$pkgname-dev
+	$pkgname-debug
+	libnjs
+	"
 source="$pkgname-$pkgver.tar.gz::https://github.com/nginx/njs/archive/$pkgver.tar.gz
 	no-werror.patch
+	shared-lib.patch
+	njs.pc
 	"
 
 case "$CARCH" in
@@ -40,7 +47,9 @@ build() {
 	make njs
 
 	./configure --cc-opt='-Os' --ld-opt='-Os'
-	make njs
+	make njs libnjs.so
+
+	sed "s|@@VERSION@@|$pkgver|" "$srcdir"/njs.pc > build/njs.pc
 }
 
 check() {
@@ -48,10 +57,17 @@ check() {
 }
 
 package() {
-	install -m 755 -D build/njs "$pkgdir"/usr/bin/njs
+	install -m 755 -D build/njs -t "$pkgdir"/usr/bin/
 
-	install -m 644 -D build/libnjs.a "$pkgdir"/usr/lib/libnjs.a
+	install -m 644 -D build/libnjs.a -t "$pkgdir"/usr/lib/
 	install -m 644 -D build-debug/libnjs.a "$pkgdir"/usr/lib/libnjs-debug.a
+
+	install -m 755 -D build/libnjs.so.* -t "$pkgdir"/usr/lib/
+
+	cp -d build/libnjs.so "$pkgdir"/usr/lib/
+	install -m 644 -D src/*.h -t "$pkgdir"/usr/include/njs/
+	install -m 644 -D build/*.h -t "$pkgdir"/usr/include/njs/
+	install -m 644 -D build/njs.pc -t "$pkgdir"/usr/lib/pkgconfig/
 }
 
 debug() {
@@ -61,7 +77,15 @@ debug() {
 	install -m 755 -D "$builddir"/build-debug/njs "$subpkgdir"/usr/bin/njs-debug
 }
 
+libnjs() {
+	pkgdesc="NGINX JavaScript interpreter library"
+
+	amove usr/lib/libnjs.so*
+}
+
 sha512sums="
 a8c893593606ee5f16df65e0d7214b3487e39dbc85e0d2dd907dd086b8bf9f06b0b902000d31bdaa1836ae6aaae001d2624b4499daf887b775be5e79a32956aa  njs-0.9.0.tar.gz
 b8ed822bf0d2ac99682cdecde5ce0136ac46cc9e6077be1369c631ac4caf22f22750f39fced061233f44e3e290e8ca6135da5d121bd53551cbd460419bc90662  no-werror.patch
+9341aeb2ca85cbffc8a08a818446c267520a8157d55246eff1c92e3a72b7da6a2c2d21f39f86c91a54e60da2e5225a0b6a89ff5a9655ed72902709226a6a0f71  shared-lib.patch
+7f415b93575dd3d4ac7a7c00996d568cadb3fde7e034245b03209354a764b6119bf394eb75b4ea02dc4670343532fefd57fd7b13206fc8b3f0f51809ddc46d2e  njs.pc
 "
