--- a/community/hyprlang/APKBUILD
+++ b/community/hyprlang/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Rabindra Dhakal <contact@qaidvoid.dev>
 maintainer="Zach DeCook <zachdecook@librem.one>"
 pkgname=hyprlang
-pkgver=0.6.0
-pkgrel=2
+pkgver=0.6.3
+pkgrel=0
 pkgdesc="The official implementation library for the hypr config language."
 url="https://hyprland.org/hyprlang/"
 arch="all"
 license="LGPL-3.0-only"
-makedepends="cmake hyprutils-dev"
+makedepends="cmake hyprutils-dev>=0.7.1"
 subpackages="$pkgname-doc $pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/hyprwm/hyprlang/archive/v$pkgver.tar.gz"
 
@@ -29,5 +29,5 @@ package() {
 }
 
 sha512sums="
-bd7aee527acc82accaf47fe061844103520787da638df769ec7f2978fb2334c33b01e0b37af03cd66f4a6dc447bbecb2ede8ed61fa59c59044aae4f631e90823  hyprlang-0.6.0.tar.gz
+43fc061574bcc81f6c247670c51c432b6db77cc06c027a1cf195bac5ef015f4c32f4c0cb97f901378ff5d1250b727b8c2b7191643b3dac592eb745a1612dd12d  hyprlang-0.6.3.tar.gz
 "
