--- a/main/screen/APKBUILD
+++ b/main/screen/APKBUILD
@@ -1,8 +1,9 @@
 # Contributor: Michael Mason <ms13sp@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=screen
-pkgver=4.9.0
-pkgrel=3
+pkgver=4.9.1_git20250512
+_gitrev=161f85b98b7e1d5e4893aeed20f4cdb5e3dfaaa4
+pkgrel=0
 pkgdesc="Window manager that multiplexes a physical terminal"
 url="https://www.gnu.org/software/screen/"
 arch="all"
@@ -10,12 +11,17 @@ license="GPL-3.0-or-later"
 options="!check"  # No test suite.
 makedepends="autoconf automake utmps-dev ncurses-dev libutempter-dev ncurses"
 subpackages="$pkgname-doc"
-source="https://ftp.gnu.org/gnu/screen/screen-$pkgver.tar.gz
-	CVE-2023-24626.patch
+#source="https://ftp.gnu.org/gnu/screen/screen-$pkgver.tar.gz
+source="screen4-$_gitrev.tar.gz::https://git.savannah.gnu.org/gitweb/?p=screen.git;a=snapshot;h=$_gitrev;sf=tgz
 	utmpx.patch
 	"
+builddir="$srcdir/$pkgname-${_gitrev:0:7}/src"
 
 # secfixes:
+#   4.9.1_git20250512-r0:
+#     - CVE-2025-46805
+#     - CVE-2025-46804
+#     - CVE-2025-46802
 #   4.9.0-r3:
 #     - CVE-2023-24626
 #   4.8.0-r4:
@@ -57,7 +63,6 @@ package() {
 }
 
 sha512sums="
-18bbb085d77ecd02cbc02fa88a945c39f06e0c6de4eeaa16b278440dac5c9896811abbe0838144e997cd344ae08b9530399fa8fcb31a65fc571ead90e8307f84  screen-4.9.0.tar.gz
-de53eafdc85b03217c75cd9f434cad33d51c22c03a718ad45fae99f9d6dbe089280778015e8a0cad4f42f0984f0fc049ced4da3a7a37bd053c59e4d8f0c0d042  CVE-2023-24626.patch
+0b715cf0a5b2f63ff4dd256748ae1c0f1c0f0b7b7ebc8ca7e719b1f72e843c64f737b640add2da1cdbf5e6beb8d52caba6aaec0521b1e5a16e8182eb98a3b375  screen4-161f85b98b7e1d5e4893aeed20f4cdb5e3dfaaa4.tar.gz
 82aca3e16c8cd7a3029d3b589ff2dd3471708d6287979ebb5cfdaedbd1f3012c0cd660b131e0cbe142b99786e49ef8b24c63159523d870e95ccf71ec94b82634  utmpx.patch
 "
