testing/sq: disable on loongarch64
tests are still failing on the builder

--- a/testing/sq/APKBUILD
+++ b/testing/sq/APKBUILD
@@ -5,8 +5,8 @@ pkgver=0.48.5
 pkgrel=5
 pkgdesc="CLI tool that provides jq-style access to structured data sources"
 url="https://sq.io/"
-# arm*, s390x, x86: tests fail
-arch="all !armhf !armv7 !s390x !x86"
+# arm*, loongarch64, s390x, x86: tests fail
+arch="all !armhf !armv7 !loongarch64 !s390x !x86"
 license="MIT"
 makedepends="go icu-dev"
 checkdepends="tzdata"
