main/lm-sensors: use subpackages=pkg:split:arch format

--- a/main/lm-sensors/APKBUILD
+++ b/main/lm-sensors/APKBUILD
@@ -15,7 +15,7 @@ subpackages="
 	$pkgname-detect
 	$pkgname-dev
 	$pkgname-doc
-	$pkgname-fancontrol
+	$pkgname-fancontrol::noarch
 	$pkgname-fancontrol-openrc:fancontrol_openrc
 	$pkgname-libs
 	$pkgname-sensord
@@ -67,7 +67,6 @@ detect() {
 }
 
 fancontrol() {
-	arch="noarch"
 	depends="bash"
 	pkgdesc="fancontrol daemon"
 	amove usr/sbin/fancontrol usr/sbin/pwmconfig
