main/lm-sensors: use amove

--- a/main/lm-sensors/APKBUILD
+++ b/main/lm-sensors/APKBUILD
@@ -60,10 +60,8 @@ package() {
 detect() {
 	depends="perl"
 	pkgdesc="Detection/migration scripts for lm-sensors"
-	mkdir -p "$subpkgdir"/usr/bin "$subpkgdir"/usr/sbin
-	cd "$pkgdir"
-	mv usr/bin/sensors-conf-convert "$subpkgdir"/usr/bin/
-	mv usr/sbin/sensors-detect "$subpkgdir"/usr/bin/
+	amove usr/bin/sensors-conf-convert
+	amove usr/sbin/sensors-detect
 }
 
 fancontrol() {
@@ -80,9 +78,7 @@ fancontrol_openrc() {
 
 sensord() {
 	pkgdesc="sensord daemon"
-	cd "$builddir"
-	mkdir -p "$subpkgdir"/usr/sbin
-	mv "$pkgdir"/usr/sbin/sensord "$subpkgdir"/usr/sbin/sensord
+	amove usr/sbin/sensord
 }
 
 sensord_openrc() {
