community/openscad: disable failing tests

--- a/community/openscad/APKBUILD
+++ b/community/openscad/APKBUILD
@@ -132,11 +132,13 @@ check() {
 		csgpngtest_polyhedron-nonplanar-tests
 		echotest_allexpressions
 		echotest_function-literal-.*
+		echotest_issue2342
 		lazyunion-.*
 		monotonepngtest_polyhedron-nonplanar-tests
 		opencsgtest_nef3_broken
 		pdfexporttest_centered
 		pdfexporttest_simple-pdf
+		svgviewbox-*
 		throwntogethertest_nef3_broken
 		$_arch_failing_tests
 		"
