--- a/testing/py3-cjkwrap/APKBUILD
+++ b/testing/py3-cjkwrap/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Dmitry Zakharchenko <dmitz@disroot.org>
-# Maintainer: Dmitry Zakharchenko <dmitz@disroot.org>
+# Maintainer:
 pkgname=py3-cjkwrap
 _pkgname=cjkwrap
 pkgver=2.2
-pkgrel=4
+pkgrel=5
 pkgdesc="Library for wrapping and filling UTF-8 CJK text"
 url="https://gitlab.com/fgallaire/cjkwrap"
 arch="noarch"
