--- a/testing/pdfcpu/APKBUILD
+++ b/testing/pdfcpu/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Dmitry Zakharchenko <dmitz@disroot.org>
-# Maintainer: Dmitry Zakharchenko <dmitz@disroot.org>
+# Maintainer:
 pkgname=pdfcpu
 pkgver=0.9.1
-pkgrel=5
+pkgrel=6
 pkgdesc="PDF processor written in Go"
 url="https://pdfcpu.io"
 arch="all"
