--- a/testing/xkb-switch/APKBUILD
+++ b/testing/xkb-switch/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Dmitry Zakharchenko <dmitz@disroot.org>
-# Maintainer: Dmitry Zakharchenko <dmitz@disroot.org>
+# Maintainer:
 pkgname=xkb-switch
 pkgver=1.8.5
-pkgrel=0
+pkgrel=1
 pkgdesc="query and change the XKB layout state"
 url="https://github.com/grwlf/xkb-switch"
 arch="all"
