--- a/testing/youtube-viewer/APKBUILD
+++ b/testing/youtube-viewer/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Dmitry Zakharchenko <dmitz@disroot.org>
-# Maintainer: Dmitry Zakharchenko <dmitz@disroot.org>
+# Maintainer:
 pkgname=youtube-viewer
 pkgver=3.11.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Lightweight YouTube client"
 url="https://github.com/trizen/youtube-viewer"
 arch="noarch"
