--- a/testing/pdfcpu/APKBUILD
+++ b/testing/pdfcpu/APKBUILD
@@ -1,8 +1,9 @@
 # Contributor: Dmitry Zakharchenko <dmitz@disroot.org>
-# Maintainer:
+# Maintainer: Celeste <cielesti@protonmail.com>
+maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=pdfcpu
 pkgver=0.9.1
-pkgrel=6
+pkgrel=7
 pkgdesc="PDF processor written in Go"
 url="https://pdfcpu.io"
 arch="all"
@@ -24,7 +25,7 @@ check() {
 }
 
 package() {
-	install -Dm755 bin/pdfcpu "$pkgdir"/usr/bin/pdfcpu
+	install -Dvm755 bin/pdfcpu -t "$pkgdir"/usr/bin/
 }
 
 sha512sums="
