--- a/testing/py3-cjkwrap/APKBUILD
+++ b/testing/py3-cjkwrap/APKBUILD
@@ -1,19 +1,18 @@
 # Contributor: Dmitry Zakharchenko <dmitz@disroot.org>
-# Maintainer:
+# Maintainer: Celeste <cielesti@protonmail.com>
+maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=py3-cjkwrap
-_pkgname=cjkwrap
 pkgver=2.2
-pkgrel=5
+pkgrel=6
 pkgdesc="Library for wrapping and filling UTF-8 CJK text"
 url="https://gitlab.com/fgallaire/cjkwrap"
 arch="noarch"
 license="LGPL-3.0-or-later"
-depends="python3"
-makedepends="py3-setuptools py3-gpep517"
+makedepends="py3-gpep517 py3-setuptools"
 options="!check" # no test suite
 subpackages="$pkgname-pyc"
 source="https://gitlab.com/fgallaire/cjkwrap/-/archive/v$pkgver/cjkwrap-v$pkgver.tar.gz"
-builddir="$srcdir/$_pkgname-v$pkgver"
+builddir="$srcdir/cjkwrap-v$pkgver"
 
 build() {
 	gpep517 build-wheel \
