community/helix: Specify the directory for system grammars

--- a/community/helix/APKBUILD
+++ b/community/helix/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=helix
 pkgver=25.01.1
-pkgrel=2
+pkgrel=3
 pkgdesc="A post-modern modal text editor"
 url="https://helix-editor.com/"
 arch="all"
@@ -25,6 +25,10 @@ prepare() {
 }
 
 build() {
+	# This path is embedded in the resulting binary so that helix can find
+	# system grammars
+	# https://github.com/helix-editor/helix/blob/25.01.1/helix-loader/src/lib.rs#L64
+	export HELIX_DEFAULT_RUNTIME=/usr/share/helix/runtime
 	cargo auditable build --frozen --release
 }
 
