--- a/testing/youtube-viewer/APKBUILD
+++ b/testing/youtube-viewer/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Dmitry Zakharchenko <dmitz@disroot.org>
-# Maintainer:
+# Maintainer: Celeste <cielesti@protonmail.com>
+maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=youtube-viewer
 pkgver=3.11.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Lightweight YouTube client"
 url="https://github.com/trizen/youtube-viewer"
 arch="noarch"
 license="Artistic-2.0"
-makedepends="perl-module-build"
 depends="
 	perl-data-dump
 	perl-json
@@ -16,6 +16,7 @@ depends="
 	perl-term-readline-gnu
 	perl-unicode-linebreak
 	"
+makedepends="perl-module-build"
 checkdepends="perl-test-pod"
 subpackages="$pkgname-doc $pkgname-gtk"
 source="$pkgname-$pkgver.tar.gz::https://github.com/trizen/youtube-viewer/archive/$pkgver.tar.gz"
@@ -36,12 +37,13 @@ package() {
 }
 
 gtk() {
-	depends="$pkgname perl-gtk3 perl-file-sharedir"
 	pkgdesc="$pkgdesc (GTK interface)"
+	depends="$pkgname=$pkgver-r$pkgrel perl-gtk3 perl-file-sharedir"
 
-	amove "usr/bin/gtk*-youtube-viewer"
-	amove "usr/share/perl5/vendor_perl/auto/share/dist/WWW-YoutubeViewer/gtk*"
-	amove usr/share/perl5/vendor_perl/auto/share/dist/WWW-YoutubeViewer/icons
+	amove \
+		usr/bin/gtk*-youtube-viewer \
+		usr/share/perl5/vendor_perl/auto/share/dist/WWW-YoutubeViewer/gtk* \
+		usr/share/perl5/vendor_perl/auto/share/dist/WWW-YoutubeViewer/icons
 }
 
 sha512sums="
