main/clang20: upgrade to 20.1.5

--- a/main/llvm20/APKBUILD
+++ b/main/llvm20/APKBUILD
@@ -41,6 +41,7 @@ source="https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver/l
 
 	fix-macho-invalid-test.patch
 	reopt-arm.patch
+	fix-pfalse-v4i1-test.patch
 	"
 builddir="$srcdir/$_pkgname-project-$pkgver.src"
 
@@ -340,4 +341,5 @@ acace8175a5468c7e84a89d1564e147e81fe92b6d910f22b058edf72094b27176677c06dbe141fcc
 2123f01d8075a15cf8c2d8091fc8c92cb99807b1d654af13b436690ddb55f3e893a494593b3c92aeab26e50db4e0500ac688129ab6bc11e4765c0308b90db101  llvm-stack-size.patch
 5e67befcc470c605aa61ff2e0c63057e121633def720e5c67fb4ecdc4a5852bee6ca93fe9953531389dc43f79e1828a411f5a40eb70a686d47ab127153be0ade  fix-macho-invalid-test.patch
 304630afeb502316ec563dbbf5a5ec78d9835d1bc8143d82cd0625692d1e40a2389748d0c0aa85244d93b0ef8c04cf533c1cf4cc7ce57058cb8e84ebec22e3c3  reopt-arm.patch
+42cd75f57e529542c16b196dd3dc3bac5185af5e0d5d22ba30e9df9e0268f5f38db15c34de73057ea275a292a98157a4104a2c3e1c5505734d8fb61bf91660ac  fix-pfalse-v4i1-test.patch
 "
