community/gnome-authenticator: upgrade to 4.6.2
https://gitlab.gnome.org/World/Authenticator/-/compare/4.6.0...4.6.2

--- a/community/gnome-authenticator/APKBUILD
+++ b/community/gnome-authenticator/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gnome-authenticator
-pkgver=4.6.0
+pkgver=4.6.2
 pkgrel=0
 pkgdesc="Two-Factor Authentication application"
 url="https://gitlab.gnome.org/World/Authenticator"
@@ -36,6 +36,7 @@ build() {
 
 check() {
 	# Compile tests before running them with Meson to avoid timeout
+  # shellcheck disable=2097 disable=2098
 	CARGO_TARGET_DIR="$builddir"/output/target \
 	CARGO_HOME="$CARGO_TARGET_DIR"/cargo-home \
 		cargo test --no-run --bin authenticator
@@ -48,5 +49,5 @@ package() {
 }
 
 sha512sums="
-489871f1aafe2b7ab006e403f8137295318557afef147d7afb4273d46c6df0711bdc0f3ede9ed0ccd786c28a0f2da912f9c12f35f33230adb0e35f38768d5dff  Authenticator-4.6.0.tar.bz2
+d55c2ba5ef0cdc6b93092a34ee98e1303cb5d8c8a8978d740a932ea0b992f45b599796306f0b7cce8a89a7adc91e2c36099525b9f52ba5b0bfbbe971acf57f52  Authenticator-4.6.2.tar.bz2
 "
