community/gnome-authenticator: fix test with appstream 1.0.5
As of appstream 1.0.5, the validator will flag instances of raw text in
description elements. Fix the appstream metadata file warnings by
wrapping text in paragraph tags.

--- a/community/gnome-authenticator/APKBUILD
+++ b/community/gnome-authenticator/APKBUILD
@@ -25,7 +25,9 @@ makedepends="
 	"
 checkdepends="appstream-glib"
 subpackages="$pkgname-dbg $pkgname-lang"
-source="https://gitlab.gnome.org/World/Authenticator/-/archive/$pkgver/Authenticator-$pkgver.tar.bz2"
+source="https://gitlab.gnome.org/World/Authenticator/-/archive/$pkgver/Authenticator-$pkgver.tar.bz2
+	appstream-metadata.patch
+	"
 builddir="$srcdir/Authenticator-$pkgver"
 
 
@@ -36,7 +38,7 @@ build() {
 
 check() {
 	# Compile tests before running them with Meson to avoid timeout
-  # shellcheck disable=2097 disable=2098
+	# shellcheck disable=2097 disable=2098
 	CARGO_TARGET_DIR="$builddir"/output/target \
 	CARGO_HOME="$CARGO_TARGET_DIR"/cargo-home \
 		cargo test --no-run --bin authenticator
@@ -50,4 +52,5 @@ package() {
 
 sha512sums="
 d55c2ba5ef0cdc6b93092a34ee98e1303cb5d8c8a8978d740a932ea0b992f45b599796306f0b7cce8a89a7adc91e2c36099525b9f52ba5b0bfbbe971acf57f52  Authenticator-4.6.2.tar.bz2
+567bef7dc9e3ca5f28a52b1a069a5ab0af5f80b5336de348cfebc27fa0af031b7e565c1e7e03aca4f499c8328509dd73366316ce4a5dbe7435de79c807d73b83  appstream-metadata.patch
 "
