community/lua-luv: upgrade to 1.51.0.1

--- a/community/lua-luv/APKBUILD
+++ b/community/lua-luv/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer:
 pkgname=lua-luv
 _rockname=luv
-pkgver=1.45.0.0
+pkgver=1.51.0.1
 _pkgver=${pkgver%.*}-${pkgver##*.}
 pkgrel=0
 pkgdesc="Bare libuv bindings for Lua"
@@ -21,9 +21,7 @@ subpackages="
 	$pkgname-dev
 	libluv
 	"
-source="https://github.com/luvit/luv/archive/$_pkgver/lua-luv-$_pkgver.tar.gz
-	disable-udp-test.patch
-	"
+source="https://github.com/luvit/luv/archive/$_pkgver/lua-luv-$_pkgver.tar.gz"
 builddir="$srcdir/luv-$_pkgver"
 
 case "$CARCH" in
@@ -115,6 +113,5 @@ _subpackage() {
 }
 
 sha512sums="
-50460573377bc9386a90aa75f7d4938571b04f74ca6f63e32fa2b2f8951e799465abb78b4270f22be511c4d328ce582c38ec3e3da1061310fcfee630b647854d  lua-luv-1.45.0-0.tar.gz
-de720e872a45aaa9d104b7646f5aee63e44d5ccfcd4b74c804a71c762dd5fe9e9f735bb82aa45e1d4631bf065f6a407fd09fbed7fc29e02e8aa756077fb71d94  disable-udp-test.patch
+b8c7dd1b371969220854a5eaeb4f570b888df95e88c59de29375abe2dc1fc1c9c4acdd8999ad633989ac0be5033f0e7adfa3a67f324170b1a053296b88465512  lua-luv-1.51.0-1.tar.gz
 "
