--- a/community/lua-luv/APKBUILD
+++ b/community/lua-luv/APKBUILD
@@ -25,7 +25,7 @@ source="https://github.com/luvit/luv/archive/$_pkgver/lua-luv-$_pkgver.tar.gz"
 builddir="$srcdir/luv-$_pkgver"
 
 case "$CARCH" in
-ppc64le|riscv64|loongarch64)
+riscv64)
 	_luajit=""
 	;;
 *)
