community/lua-luv: skip test-tty test
`tty normal` test passes on CI but fails on the builders due to no tty,
and no tty stream is returned.

```
  ./tests/test-tty.lua:19: bad argument #1 to 'is_readable' (Expected uv_stream userdata)
  stack traceback:
  	[C]: in function 'is_readable'
  	./tests/test-tty.lua:19: in function 'fn'
  	./lib/tap.lua:59: in function <./lib/tap.lua:48>
  	[C]: in function 'xpcall'
  	./lib/tap.lua:48: in function 'run'
  	./lib/tap.lua:146: in function 'tap'
  	tests/run.lua:23: in main chunk
  	[C]: at 0xaab99c555420
not ok 143 tty - tty normal
```

--- a/community/lua-luv/APKBUILD
+++ b/community/lua-luv/APKBUILD
@@ -21,7 +21,9 @@ subpackages="
 	$pkgname-dev
 	libluv
 	"
-source="https://github.com/luvit/luv/archive/$_pkgver/lua-luv-$_pkgver.tar.gz"
+source="https://github.com/luvit/luv/archive/$_pkgver/lua-luv-$_pkgver.tar.gz
+	skip-tty-test.patch
+	"
 builddir="$srcdir/luv-$_pkgver"
 
 case "$CARCH" in
@@ -114,4 +116,5 @@ _subpackage() {
 
 sha512sums="
 b8c7dd1b371969220854a5eaeb4f570b888df95e88c59de29375abe2dc1fc1c9c4acdd8999ad633989ac0be5033f0e7adfa3a67f324170b1a053296b88465512  lua-luv-1.51.0-1.tar.gz
+3f64c2c3aa6a688042081f3ff31c569fc184b02aec03fb848a6bb890b8c572707ad8c79c520a6e520f4b390192abfd689e1bdbf61bc61412784a5f749acaf92f  skip-tty-test.patch
 "
