testing/oils-for-unix: take over maintainership

--- a/testing/oils-for-unix/APKBUILD
+++ b/testing/oils-for-unix/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Samuel Hierholzer <samuel@ton-kunst.ch>
-# Maintainer: Samuel Hierholzer <samuel@ton-kunst.ch>
+# Maintainer: James Chen-Smith <james@chen-smith.net>
 pkgname=oils-for-unix
 pkgver=0.29.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Unix shell with JSON-compatible structured data"
 url="https://www.oils.pub/"
 arch="all"
