community/elixir: backport patches from upstream to fix flaky tests

--- a/community/elixir/APKBUILD
+++ b/community/elixir/APKBUILD
@@ -13,7 +13,10 @@ depends="erlang-dev>=23.0"
 makedepends="erlang-dialyzer"
 checkdepends="erlang-doc"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/elixir-lang/elixir/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/elixir-lang/elixir/archive/v$pkgver.tar.gz
+	consistently-apply-timeout.patch
+	ensure-timestamp-is-bumped.patch
+	"
 
 build() {
 	LANG="C.UTF-8" make
@@ -38,4 +41,6 @@ package() {
 
 sha512sums="
 bf56c69ab7768c6d08b42bf42b062db8d7a063ec6971e5f21575f5502f7d954fe4ab77dcb83cbb4d72dcc53ec91a396e3738adabcc52e83cb375296989054df5  elixir-1.18.3.tar.gz
+e72a00f8170bdf96ac92e3224492b2185d2aa5e602124ec0f8c764d9d79a0ebcf249a1c19be37a0a65dc3209b8e14131df6d39cb21dc374399a62741bbe4ca02  consistently-apply-timeout.patch
+ea59cdbf5aa84c3e698f493a30ef9794b5a9ee32435f51a94ea6c700f58eb08f8cbf43345acb3d0d6ac420e6a5f0f2430ad97d670bce398358d4a47ab1077d14  ensure-timestamp-is-bumped.patch
 "
