community/elixir: update depends
  - we don't ship erlang < 23.0 anymore in aports

  - git is required for computing the value of
    `git_exclude` in lib/mix/test/test_helper.exs

--- a/community/elixir/APKBUILD
+++ b/community/elixir/APKBUILD
@@ -9,9 +9,9 @@ pkgdesc="Elixir is a dynamic, functional language designed for building scalable
 url="https://elixir-lang.org/"
 arch="noarch"
 license="Apache-2.0"
-depends="erlang-dev>=23.0"
+depends="erlang-dev"
 makedepends="erlang-dialyzer"
-checkdepends="erlang-doc"
+checkdepends="erlang-doc git"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/elixir-lang/elixir/archive/v$pkgver.tar.gz
 	consistently-apply-timeout.patch
