testing/httplz: fix build with rust 1.87

--- a/testing/httplz/APKBUILD
+++ b/testing/httplz/APKBUILD
@@ -11,6 +11,7 @@ makedepends="cargo cargo-auditable openssl-dev linux-headers"
 subpackages="$pkgname-doc"
 source="https://github.com/thecoshman/http/archive/v$pkgver/httplz-$pkgver.tar.gz
 	Cargo.lock
+	update-traitobject.patch
 	"
 builddir="$srcdir/http-$pkgver"
 options="net" # cargo crates
@@ -37,5 +38,6 @@ package() {
 
 sha512sums="
 8d41b3216b44b3f01e247a381f97c5879a283934a448338cb82835822c31be97591de7ffb1a1f6a0fb3bdd60de70f57c5e48cc56f71bc71e1f74b85c318b6a51  httplz-2.2.0.tar.gz
-da766208907a7ae7b271f5bd046b79d72b55b67ac391b3302330a7cb9310389cc504b5e876b1e6e6b44c841d7b398009d8f09bb667b679829011e35589a273ef  Cargo.lock
+e7bedc19deb7cc62e21f30b448f9f7eabafab6ef394e223d123984c2b6ccfddf90a83246e5d8b4fa748989957d0c2547d59c65f1712f3f8b4234657a511c78b8  Cargo.lock
+635dac2ef7940e82a057bd857cbc95f6df453d6bb3cf7b666340a57901d04cf3431733272606748aa89a59ce86c4de9e605b573018aa29e3866855fb13818460  update-traitobject.patch
 "
