community/lua-lgi: upgrade to 0.9.2_git20241227

--- a/community/lua-lgi/APKBUILD
+++ b/community/lua-lgi/APKBUILD
@@ -2,8 +2,8 @@
 _luaversions="5.1 5.2 5.3 5.4"
 pkgname=lua-lgi
 _rockname="${pkgname#lua-*}"
-pkgver=0.9.2_git20230827
-_gitcommit=e9290601d78470e84ed1e2f16b7c9a8834cd8bb5
+pkgver=0.9.2_git20241227
+_gitcommit=a412921fad445bcfc05a21148722a92ecb93ad06
 pkgrel=0
 pkgdesc="Dynamic Lua binding to GObject libraries using GObject-Introspection"
 url="https://github.com/lgi-devs/lgi"
@@ -16,7 +16,7 @@ for _i in $_luaversions; do
 	makedepends="$makedepends lua$_i-dev"
 	subpackages="$subpackages lua$_i-$_rockname:_split"
 done
-source="lgi-$pkgver.tar.gz::https://github.com/lgi-devs/lgi/archive/$_gitcommit.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/lgi-devs/lgi/archive/$_gitcommit.tar.gz
 	tests.patch
 	"
 builddir="$srcdir/lgi-$_gitcommit"
@@ -77,6 +77,6 @@ _split() {
 }
 
 sha512sums="
-e3025f55dafcb8b50596be03e3dea1c0a9b0cbea66cf0861ea0165eb0409ea1bcc27eb9b6db4ab3363c455971b0d434af263e15151eddf42d030ad3ca58f43e6  lgi-0.9.2_git20230827.tar.gz
+eb8fc13c8183d9b5677135c6ec81596489e9f0a031a21d37ab6220271d304190a4a4a94caa1ce1d91b71a004101deecef59964b446a5d05c789a4d511b83d250  lua-lgi-0.9.2_git20241227.tar.gz
 b2a6d6c168bcbf91d88829b1c8bde5f14c03a0f81ee14fdd7caaebcb0622b680425eac73134722ac3c4a59b733365f549bf68b0084df697a0b63ac68b5085ba9  tests.patch
 "
