testing/66: fix license field

--- a/testing/66/APKBUILD
+++ b/testing/66/APKBUILD
@@ -2,11 +2,11 @@
 maintainer="Angelo Verlain <hey@vixalien.com>"
 pkgname=66
 pkgver=0.8.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="a service manager around S6 supervision suite"
 url="https://web.obarun.org/software"
 arch="all"
-license="0BSD"
+license="ISC"
 makedepends="
 	clang
 	execline-dev
