--- a/testing/66/APKBUILD
+++ b/testing/66/APKBUILD
@@ -2,13 +2,12 @@
 maintainer="Angelo Verlain <hey@vixalien.com>"
 pkgname=66
 pkgver=0.8.1.1
-pkgrel=2
+pkgrel=3
 pkgdesc="a service manager around S6 supervision suite"
 url="https://web.obarun.org/software"
 arch="all"
 license="ISC"
 makedepends="
-	clang
 	execline-dev
 	linux-headers
 	lowdown
@@ -18,12 +17,15 @@ makedepends="
 	"
 depends="s6"
 subpackages="$pkgname-dbg $pkgname-dev $pkgname-doc $pkgname-init"
-source="$pkgname-$pkgver.tar.gz::https://git.obarun.org/Obarun/66/-/archive/$pkgver/66-$pkgver.tar.gz"
+source="
+	$pkgname-$pkgver.tar.gz::https://git.obarun.org/Obarun/66/-/archive/$pkgver/66-$pkgver.tar.gz
+	0000-fix-shebang-function.patch
+	"
 options="!check"
 install="66.pre-install 66.pre-upgrade"
 
 build() {
-	CC=clang ./configure \
+	./configure \
 		--enable-static \
 		--prefix=/usr \
 		--with-s6-log-timestamp=iso \
@@ -45,4 +47,5 @@ init() {
 
 sha512sums="
 7d741f1e58ac13bdcdce36f3f9e7b6729fd4c90fe5200ac38cab2fb099d10352f3f45f55f5c35cc5e2002347a4eee64c3680f7a98bdf0eadf796f00c66cb64db  66-0.8.1.1.tar.gz
+ea2cc3ea2a681005cd23b493b870ae1e14fdad3a018abd6fc4320b9740021bf9e5f744a90ad7a54db8a1d7fc19293489d2b1e5757199074ea399e004102b5bb4  0000-fix-shebang-function.patch
 "
